# arxiv-zh

./: .gitignore  AGENTS.md  LOCAL_USAGE.md  MANIFEST.in  README.md  config.example.yaml  environment.yml  pyproject.toml
docs/: GIT_WORKFLOW.md  configuration.md  custom-rules.md  installation.md  known-limitations.md  release.md  troubleshooting.md
docs/plans/: 2026-02-20-paragraph-inline-body-fix.md
legacy/ieea-transition/: README.md  pyproject.toml
legacy/ieea-transition/src/ieea_transition/: __init__.py  cli.py
scripts/: check_env.py  release_arxiv_translate.sh  release_ieea_transition.sh  run_e2e_openrouter_c100.sh  test_cjk_fonts.py  test_translation_api.py
src/arxiv_translate/: cli.py
src/arxiv_translate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/arxiv_translate/cache/: __init__.py  key_builder.py  local_translation_cache.py
src/arxiv_translate/compiler/: __init__.py  chinese_support.py  latex_compiler.py
src/arxiv_translate/defaults/: config.yaml  glossary.yaml
src/arxiv_translate/downloader/: arxiv.py
src/arxiv_translate/parser/: latex_parser.py  structure.py
src/arxiv_translate/rules/: config.py  env.py  glossary.py  user_paths.py
src/arxiv_translate/translator/: __init__.py  ark_provider.py  deepseek_provider.py  openai_provider.py  pipeline.py  postprocess.py  prompts.py
src/arxiv_translate/validator/: engine.py  rules.py
src/ieeA/: __init__.py  cli.py
src/ieeA/cache/: __init__.py  key_builder.py  local_translation_cache.py
templates/: Makefile.latexmk
tests/: conftest.py  test_ark_autoroute.py  test_arxiv_zh_cli.py  test_bailian_provider.py  test_batch_translation.py  test_bibliography_parse_integration.py  test_bibliography_resolve.py  test_brace_prompt_examples.py  test_chinese_support_engine_conflicts.py  test_cli_version_option.py  test_command_wrapped_paragraph_chunking.py  test_compilation_config.py  test_compile_error_summary.py  test_deepseek_provider.py  test_env.py  test_escape_bib_integration.py  test_fonts_dir_config.py  test_glossary_matching.py  test_latex_compiler_font_fallbacks.py  test_latex_compiler_success_criteria.py  test_latex_escape.py  test_local_cache_cli.py  test_local_cache_pipeline.py  test_local_translation_cache.py  test_markdown_bold_postprocess.py  test_namespace_compat.py  test_nested_chunk_in_protected_env.py  test_openai_coding.py  test_packaging_metadata.py  test_parser_chunk_consistency.py  test_placeholder_missing_fallback.py  test_placeholder_restoration.py  test_placeholder_retry_pipeline.py  test_prompt_stability.py  test_provider_cache.py  test_recursive_chunk_reconstruction.py  test_structural_line_label_extraction.py  test_table_alignment_placeholders.py  test_timeout_handling.py  test_universal_corpus.py  (+4 more)
tests/2026-02-07/: test_caption_extraction_robustness.py  test_parser_pipeline_refactor.py  test_parser_title_unified.py
(+33 files in other folders)
