[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-zh"
dynamic = ["version"]
description = "DeepSeek-powered arXiv Chinese translation CLI with local font support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "arxiv-zh Maintainers"},
]
keywords = ["arxiv", "latex", "translation", "chinese", "deepseek", "llm", "academic", "paper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pylatexenc",
  "typer",
  "rich",
  "pyyaml",
  "pydantic",
  "requests",
  "openai>=1.0.0",
  "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/Y006/arxiv-zh"
Repository = "https://github.com/Y006/arxiv-zh"

[project.scripts]
arx = "arxiv_translate.cli:main"
arxiv-translate = "arxiv_translate.cli:main"
arxiv-zh = "arxiv_translate.cli:zh_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = []
