[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieeA"
version = "1.3.1"
description = "Legacy transitional package. Please migrate to arxiv-translate."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "arxiv-translate Team"},
]
dependencies = [
  "arxiv-translate>=1.0.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/zcyisiee/arxiv-translate"
Repository = "https://github.com/zcyisiee/arxiv-translate"

[project.scripts]
ieeA = "ieea_transition.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
